Fixed edit title overlap with action menu
Bug: T85283

--- a/modules/styles/board/topic/titlebar.less
+++ b/modules/styles/board/topic/titlebar.less
@@ -84,6 +84,9 @@ div#content h2.flow-topic-title {
 // MEDIA QUERIES
 @media all and (min-width: @wgFlowDeviceWidthTablet) {
 	.flow-topic-titlebar {
-		padding: 1em @topicIndent;
+		padding-top: 1em;
+		padding-bottom: 1em;
+		padding-left: @topicIndent;
+		padding-right: @topicIndent + 1;
 	}
 }
